[fix] #184 unreadable (too small) hover label for binary switch.

--- a/app/assets/stylesheets/main_backoffice.scss
+++ b/app/assets/stylesheets/main_backoffice.scss
@@ -703,8 +703,8 @@ details {
   }
 
   .bslabel {
-    margin-top: -2ex;
-    font-size: 30%;
+    margin-top: -1.5ex;
+    font-size: 60%;
     opacity: 0;
     visibility: hidden;
   }
